feat: add header and description styles

--- a/index.html
+++ b/index.html
@@ -11,20 +11,51 @@
                 <div class="content">
                     <img alt="photo" class="photo" src="./photo/DSC_0921.jpg">
                 </div>
-                <div class="content">
+                <div class="name">
                     <h2>Василевская Марина Михайловна</h2>
                 </div>
             </div>
             <div class="chapterContainer">
+                <div class="contentTopic">
+                    <h3>Обо мне</h3>
+                </div>
+                <div class="contentDescription">
+                    <p>
+                        Мой общий стаж работы - 11 лет. Проведение мероприятий, тематическое украшение помещения. Личные качества: ответственность, творческий подход к профессиональной деятельности, стремление к профессиональному росту, исполнительность. Уверенный пользователь ПК. Работа HTML, CSS, Git программах (изучение JavaScript). Люблю перемены  и узнавать новое, мечтаю изучить интересную сферу frontend-разработчика.
+                     </p>
+                </div>
             </div>
             <div class="chapterContainer">
+                <div>
+
+                </div>
+                <div>
+
+                </div>
             </div>
             <div class="chapterContainer">
+                <div>
+
+                </div>
+                <div>
+
+                </div>
             </div>
             <div class="chapterContainer">
+                <div>
+
+                </div>
+                <div>
+
+                </div>
             </div>
             <div class="chapterContainer">
+                <div>
+
+                </div>
             </div>
         </div>
+
     </body>
 </html>
+
