--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
     <head>
-      <meta charset="UTF-8">
-        <link rel="stylesheet" href="./styles/style.css" content="width=device-width, initial-scale=1.0">
+        <meta charset="UTF-8"/>
+        <link rel="stylesheet" href="/styles/style.css">
         <title>Василевская Марина Михайловна</title>
     </head>
     <body>
         <div class="externalContainer">
             <div class="chapterContainer">
-                <div class="content">
-                    <img alt="photo" class="photo" src="./photo/DSC_0921.jpg">
+                <div class="photoContainer">
+                    <img class="photo" src="/photo/DSC_0921.jpg">
                 </div>
                 <div class="name">
                     <h2>Василевская Марина Михайловна</h2>
@@ -26,32 +26,45 @@
                 </div>
             </div>
             <div class="chapterContainer">
-                <div>
-
+                <div class="contentTopic">
+                    <h3>Опыт работы</h3>
                 </div>
-                <div>
-
-                </div>
-            </div>
-            <div class="chapterContainer">
-                <div>
-
-                </div>
-                <div>
-
+                <div class="contentDescription">
+                    <p>Небольшой опыт секретаря, 2 года Дом Культуры - организатор праздников, 1 год организатор праздников в школе, 8 лет в детском саду музыкальным руководитель (1 категории).</p>
                 </div>
             </div>
             <div class="chapterContainer">
-                <div>
-
+                <div class="contentTopic">
+                    <h3>Образование</h3>
                 </div>
-                <div>
-
+                <div class="contentDescription">
+                    <p>Среднее-специальное.</p>
                 </div>
             </div>
             <div class="chapterContainer">
-                <div>
-
+                <div class="contentTopic">
+                    <h3>Профессиональные интересы</h3>
+                </div>
+                <div class="contentDescription">
+                    <p>Планирую развиваться в frontend-разработке, стремиться стать частью дружной и профессиональной команды, в которой я могла бы развивать свои навыки разработки для достижения командных результатов.</p>
+                </div>
+            </div>
+            <div class="contactsContainer">
+             
+                <div class="contacts">
+                    <div>
+                        <h3>Контакты</h3>
+                    </div>
+                    <div>
+                        <ul>
+                            <li>
+                                <a href="mailto:marivasilevskaa3@gmail.com">marivasilevskaa3@gmail.com</a>
+                            </li>
+                            <li>
+                                <a href="tel:+79532887975">+7 (953) 288-79-75</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
