--- a/index.html
+++ b/index.html
@@ -1,118 +1,165 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-      <meta charset="UTF-8"/>
+      <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <link rel="stylesheet" href="./styles/style.css">
+      <link rel="stylesheet" href="./style.css">
       <title>Marina Vasilevskaya</title>
     </head>
    <body>
       <div class="wrapper">
          <header>
-            <div class="header">
+            <nav class="header">
                <ul class="nav">
-                  <li>Name</li>
-                  <li>About me</li>
-                  <li>Skills</li>
-                  <li>Code example</li>
-                  <li>Experience</li>
-                  <li>Education</li>
-                  <li>Courses</li>
-                  <li>English</li>
-                  <li>Contacts</li>
-            </div>
+                  <li><a href="#name">Name</a></li>
+                  <li><a href="#about-me">About Me</a></li>
+                  <li><a href="#skills">Skills</a></li>
+                  <li><a href="#code-example">Code Example</a></li>
+                  <li><a href="#experience">Experience</a></li>
+                  <li><a href="#projects">Projects</a></li>
+                  <li><a href="#education">Education</a></li>
+                  <li><a href="#courses">Courses</a></li>
+                  <li><a href="#english">English</a></li>
+                  <li><a href="#contacts">Contacts</a></li>
+               </ul>
+            </nav>
          </header>
          <main>
-            <div class="chapterContainer">
-               <div class="photoContainer">
+            <div class="chapter-container">
+               <div class="photo-container">
                   <img alt="photo" class="photo" src="./DSC_0921.jpg">
                </div>
-               <div class="name">
-                  <h1>Marina Vasilevskaya</h1>
-               </div>
+               <a id="name">
+                  <div class="name">
+                     <h1>Marina Vasilevskaya</h1>
+                  </div>
+               </a>
             </div>
-            <div class="chapterContainer">
-               <div class="contentTopic">
-                  <h2>About Me</h2>
+            <div class="chapter-container">
+               <div class="content-topic">
+                  <a id="about-me">
+                     <h2>About Me</h2>
+                  </a>
                </div>
-               <div class="contentDescription">
+               <div class="content-description">
                   <p>
                      Musical director of the 1st category. Development of scenarios, holding thematic events, thematic decoration of the premises.
-                     </p>
+                  </p>
                   <p>
-                        I plan to develop in frontend development, strive to become part of a friendly and professional team in which I could develop my development skills to achieve team results.
-                     </p>
-                     <p>
-                     <b>Key Skills</b>
-                     </p>
-                     <ul>
-                        <li>Teamwork</li>
-                        <li>Responsibility</li>
-                        <li>Creativity</li>
-                        <li>Desire for novelty</li>
-                     </ul>
-               </div>
-            </div>
-            <div class="chapterContainer">
-               <div class="contentTopic">
-                  <h2>Skills</h2>
-               </div>
-               <div class="contentDescription">
-                  <ul type="disc">
-                        <li>HTML</li>
-                        <li>CSS</li>
-                        <li>Git</li>
-                        <li>JavaScript</li>
+                     I plan to develop in frontend development, strive to become part of a friendly and professional team in which I could develop my development skills to achieve team results.
+                  </p>
+                  <p>
+                  <b>Key Skills</b>
+                  </p>
+                  <ul>
+                     <li>Teamwork</li>
+                     <li>Responsibility</li>
+                     <li>Creativity</li>
+                     <li>Desire for novelty</li>
                   </ul>
                </div>
+            </div>
+            <div class="chapter-container">
+               <div class="content-topic">
+                  <a id="skills">
+                     <h2>Skills</h2>
+                  </a>
                </div>
-            <div class="chapterContainer">
-               <div class="contentTopic">
-                  <h2>Code Example</h2>
+               <div class="content-description">
+                  <ul>
+                     <li>HTML</li>
+                     <li>CSS</li>
+                     <li>Git</li>
+                     <li>JavaScript</li>
+                  </ul>
                </div>
-               <div class="contentDescription">
+            </div>
+            <div class="chapter-container">
+               <div class="content-topic">
+                  <a id="code-example">
+                     <h2>Code Example</h2>
+                  </a>
+               </div>
+               <div class="content-description">
+                  <pre>
+                  <code>
+   function digits(n) {
+      if(n === 0) {
+         return 1;
+      }
+   
+      for(var i = 0; Math.floor(n) > 0; i++) {
+         n /= 10;
+      }
+   
+      return i;
+   }
+                  </code>
+                  </pre>
+               </div>
+            </div>
+            <div class="chapter-container">
+               <div class="content-topic">
+                  <a id="experience">
+                     <h2>Experience</h2>
+                  </a>
+               </div>
+               <div class="content-description">
                   <p>
-                  Will be added over time
+                     Will be added over time
                   </p>
                </div>
             </div>
-            <div class="chapterContainer">
-               <div class="contentTopic">
-                  <h2>Experience</h2>
+            <div class="chapter-container">
+               <div class="content-topic">
+                  <a id="projects">
+                     <h2>Projects</h2>
+                  </a>
                </div>
-               <div class="contentDescription">
-                  <p>
-                        Will be added over time
-                  </p>
+               <div class="content-description">
+                  <ul class="footer__list">
+                     <li>
+                        <a href="https://mari-vasilevskaya.github.io/rsschool-cv/cv">CV Markdown</a>
+                     </li>
+                     <li>
+                        <a href="https://github.com/Mari-Vasilevskaya/rsschool-cv/tree/rsschool-cv-html">CV HTML</a>
+                     </li>
+                  </ul>
                </div>
             </div>
-            <div class="chapterContainer">
-               <div class="contentTopic">
-                  <h2>Education</h2>
+            <div class="chapter-container">
+               <div class="content-topic">
+                  <a id="education">
+                     <h2>Education</h2>
+                  </a>
                </div>
-               <div class="contentDescription">
-                  <ul type="disc">
+               <div class="content-description">
+                  <ul>
                      <li>Educational institution: Minsk State College of Arts</li>
                      <li>Faculty: folk art</li>
                      <li>Specialization: folk music</li>
                   </ul>
                </div>
             </div>
-            <div class="chapterContainer">
-               <div class="contentTopic">
-                  <h2>Courses</h2>
+            <div class="chapter-container">
+               <div class="content-topic">
+                  <a id="courses">
+                     <h2>Courses</h2>
+                  </a>
                </div>
-               <div class="contentDescription">
+               <div class="content-description">
                   <p>
                      I start my studies at rolling-scopes-school 
                   </p>
                </div>
             </div>
-            <div class="chapterContainer">
-               <div class="contentTopic">
-                  <h2>English</h2>
+            <div class="chapter-container">
+               <div class="content-topic">
+                  <a id="english">
+                     <h2>English</h2>
+                  </a>
                </div>
-               <div class="contentDescription">
+               <div class="content-description">
                   <p>
                      A1 (keep learning the language)
                   </p>
@@ -120,14 +167,16 @@
             </div>
          </main>
          <footer>
-            <div class="contactsContainer">
+            <div class="contacts-container">
                <div class="footer__logo">
                   <a href="https://rs.school/js/">
                   <img src="./rs_school.svg" alt="RS_School-Logo"></a>
                </div>
                <div class="contacts">
                   <div>
-                     <h3>Contacts</h3>
+                     <a id="contacts">
+                        <h3>Contacts</h3>
+                     </a>
                   </div>
                   <div>
                      <ul class="footer__list">
@@ -142,10 +191,10 @@
                         </li>
                      </ul>
                   </div>
-                  <div>
-                     <p>2023</p>
-                  </div>
                </div>
+            </div>
+            <div>
+               <b>2023</b>
             </div>
          </footer>
       </div>
