--- a/index.html
+++ b/index.html
@@ -3,9 +3,18 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Document</title>
+   <link rel="apple-touch-icon" sizes="180x180" href="./img/favicon_io/apple-touch-icon.png">
+   <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon_io/favicon-32x32.png">
+   <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon_io/favicon-16x16.png">
+   <link rel="manifest" href="./img/favicon_io/site.webmanifest">
+   <link rel="stylesheet" href="./inter-v13-latin/inter-v13-latin-700.woff2">
+   <link rel="stylesheet" href="./inter-v13-latin/inter-v13-latin-regular.woff2">
+   <link rel="stylesheet" href="./reset.css">
+   <link rel="stylesheet" href="./style.css">
+   <title>Rsschool-cv-html</title>
 </head>
 <body>
+
    
 </body>
 </html>
