--- a/index.html
+++ b/index.html
@@ -14,6 +14,32 @@
    <title>Rsschool-cv-html</title>
 </head>
 <body>
+   <header>
+      <nav class="header">
+         <ul class="nav">
+            <li><a href="#name" class="active"><b>Name</b></a></li>
+            <li><a href="#skills" class="active"><b>Skills</b></a></li>
+            <li><a href="#education" class="active"><b>Education</b></a></li>
+            <li><a href="#contacts" class="active"><b>Contacts</b></a></li>
+         </ul>
+      </nav>
+   </header>
+   <main>
+      <div class="chapter-container">
+         <div class="photo-container">
+            <img alt="photo" class="photo" src="./img/DSC_0921.jpg">
+         </div>
+         <a id="name">
+            <div class="name">
+               <h1>Marina Vasilevskaya</h1>
+            </div>
+         </a>
+      </div>
+      </div>
+   </main>
+   <footer>
+
+   </footer>
 
    
 </body>
