feat: add a footer section

--- a/index.html
+++ b/index.html
@@ -38,9 +38,37 @@
       </div>
    </main>
    <footer>
-
+      <div class="footer-container">
+         <div class="footer__logo">
+            <a href="https://rs.school/js/">
+               <img src="./img/svg/rs_school.svg" alt="RS_School-Logo">
+            </a>
+         </div>
+         <div class="year">
+            <b>2023</b>
+         </div>
+         <div class="contacts">
+            <div>
+               <a id="contacts">
+                  <h3>Contacts</h3>
+               </a>
+            </div>
+            <div>
+               <ul class="footer__list key-skills">
+                  <li>
+                     <a class="active" href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox" target="_blank"><b>marivasilevskaa3@gmail.com</b></a>
+                  </li>
+                  <li>
+                     <a class="active" href="https://github.com/Mari-Vasilevskaya" target="_blank"><b>GitHub: Mari-Vasilevskaya</b></a>
+                  </li>
+                  <li>
+                     <a class="active" href="https://discord.com/channels/516715744646660106/747714817845887036" target="_blank"><b>Discord: m.ari_v.asilevskaya</b></a>
+                  </li>
+               </ul>
+            </div>
+         </div>
+      </div>
    </footer>
-
    
 </body>
 </html>
