fix: resize containers and padding

--- a/index.html
+++ b/index.html
@@ -14,27 +14,51 @@
    <title>Rsschool-cv-html</title>
 </head>
 <body>
-   <header>
-      <nav class="header">
-         <ul class="nav">
-            <li><a href="#name" class="active"><b>Name</b></a></li>
-            <li><a href="#skills" class="active"><b>Skills</b></a></li>
-            <li><a href="#education" class="active"><b>Education</b></a></li>
-            <li><a href="#contacts" class="active"><b>Contacts</b></a></li>
-         </ul>
-      </nav>
+   <header class="header">
+      <div class="container">
+          <div class="header__container">
+            <div class="header__photo">
+               <img src="./img/DSC_0921.jpg" alt="photo" class="photo__container">
+            </div>
+               <div class="header__content">
+                  <nav class="header__menu">
+                     <ul class="nav__list">
+                        <li class="nav__item">
+                           <a href="#about" class="nav__link">About Me</a>
+                        </li> 
+                        <li class="nav__item">
+                           <a href="#skills" class="nav__link">Skills</a>
+                        </li>
+                        <li class="nav__item">
+                           <a href="#code" class="nav__link">Code</a>
+                        </li>
+                        <li class="nav__item">
+                           <a href="#skills" class="nav__link">Experience</a>
+                        </li>
+                        <li class="nav__item">
+                           <a href="#projects" class="nav__link">Projects</a>
+                        </li>
+                        <li class="nav__item">
+                           <a href="#projects" class="nav__link">Education</a>
+                        </li>
+                        <li class="nav__item">
+                           <a href="#projects" class="nav__link">Courses</a>
+                        </li>
+                        <li class="nav__item">
+                           <a href="#contacts" class="nav__link">Contacts</a>
+                        </li>
+                     </ul>
+                  </nav>
+               <div class="header__info">
+                  <h1 class="header__title">
+                     Marina Vasilevskaya
+                  </h1>
+               </div>
+            </div>
+         </div>
+      </div>
    </header>
    <main>
-      <div class="chapter-container">
-         <div class="photo-container">
-            <img alt="photo" class="photo" src="./img/DSC_0921.jpg">
-         </div>
-         <a id="name">
-            <div class="name">
-               <h1>Marina Vasilevskaya</h1>
-            </div>
-         </a>
-      </div>
    </main>
    <footer>
       <div class="footer-container">
