feat: add a section on the left school education

--- a/index.html
+++ b/index.html
@@ -58,8 +58,39 @@
          </div>
       </div>
    </header>
-   <main>
-   </main>
+  <!-- main -->
+  <main class="main">
+   <div class="container">
+      <div class="main__holder">
+         <div class="section__left">
+            <section class="education">
+               <h3 class="skills__subtitle">
+                  Education
+               </h3>
+               <div class="key__skills">
+                  <ul>
+                     <li>Educational institution: Minsk State College of Arts</li>
+                     <li>Faculty: folk art</li>
+                     <li>Specialization: folk music</li>
+                  </ul>
+               </div>
+               <section class="skills" id="skills">
+                  <h2 class="skills__subtitle">
+                     Skills
+                  </h2>
+                  <ul class="skills__list">
+                     <li class="skills__item skills__html">HTML</li>
+                     <li class="skills__item skills__css">CSS</li>
+                     <li class="skills__item skills__javascript">JavaScript</li>
+                     <li class="skills__item skills__github">GitHub</li>
+                  </ul>
+               </section>
+            </section>
+         </div>
+<!-- About me -->
+      </div>
+   </div>
+</main>
    <footer>
       <div class="footer-container">
          <div class="footer__logo">
