feat: add about me section

--- a/index.html
+++ b/index.html
@@ -88,6 +88,28 @@
             </section>
          </div>
 <!-- About me -->
+         <div class="main__container">
+            <section class="main__about" id="about">
+               <h2 class="main__header">
+                  About me
+               </h2>
+               <p class="main__descr">
+                  Musical director of the 1st category. Development of scenarios, holding thematic events, thematic decoration of the premises.
+               </p>
+               <p class="main__descr">
+                  I plan to develop in frontend development, strive to become part of a friendly and professional team in which I could develop my development skills to achieve team results.
+               </p>
+               <div class="about-languages">
+                  <h3 class="main__subheader">
+                     Languages:
+                  </h3>
+                  <ul class="main__list">
+                     <li class="key__skills">A2 (keep learning the language)</li>
+                  </ul>
+               </div>
+            </section>
+
+
       </div>
    </div>
 </main>
