feat: add section code, projects

--- a/index.html
+++ b/index.html
@@ -108,8 +108,41 @@
                   </ul>
                </div>
             </section>
-
-
+<!-- Code -->
+            <section class="code-example" id="code">
+               <h2 class="main__header">
+                  Code example
+               </h2>
+               <pre class="pre">
+                  <code class="code">
+function digits(n) {
+      if(n === 0) {
+      return 1;
+}
+         for(var i = 0; Math.floor(n) > 0; i++) {
+      n /= 10;
+}
+      return i;
+}
+                  </code>
+               </pre>
+            </section>
+            <section class="projects" id="projects">
+               <h2 class="main__header">
+                  Projects
+               </h2>
+               <div class="projects__info">
+                  <ul>
+                     <li>
+                        <a href="https://mari-vasilevskaya.github.io/rsschool-cv/cv" target="_blank">CV Markdown</a>
+                     </li>
+                     <li>
+                        <a href="https://mari-vasilevskaya.github.io/rsschool-cv/" target="_blank">CV HTML</a>
+                     </li>
+                  </ul>
+               </div>
+            </section>
+         </div>
       </div>
    </div>
 </main>
